--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,12 @@
 # ----------------------- #
 
 url: http://cnupdog.github.io
-title: 一亩田
-subtitle: 用来种代码的一亩田.
+title: 一亩三分田
+subtitle: 撒下一粒种子,收获一片希望.
 author: cnupdog@gmail.com
 simple_search: http://google.com/search
-description:
+description: cnupdog 博客。关注技术与设计，记录生活点滴
+keywords: dev,ops,java,python
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -19,7 +20,7 @@ date_format: "ordinal"
 subscribe_rss: /atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
-email:
+email: cnupdog@gmail.com
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -44,7 +45,7 @@ pygments: false # default python pygments have been replaced by pygments.rb
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+excerpt_link: "继续阅读 &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
 titlecase: true       # Converts page and post titles to titlecase
 
@@ -97,4 +98,4 @@ disqus_show_comment_count: false
 google_analytics_tracking_id:
 
 # Facebook Like
-facebook_like: false
+# facebook_like: false
